Add possibility to check if days have lessons when a semester is updated